# open-gl-cube

./: CMakeLists.txt  README.md
src/: main.cpp
